robotics  page fix

--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -552,8 +552,9 @@
                                                 <strong style="color:#FE6500">
                                                     Sold Out
                                                 </strong>                                                                                                                                  
-                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
-                                            </td>
+                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                </div>                                            </td>
                                             <td data-title="Grade level">3rd-5th</td>       
                                             <td data-title="Price">
                                                 TBD									
@@ -628,15 +629,16 @@
                                                 <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" target="_blank" title="Private Class" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">Private Class </strong>
                                                 </a>
-                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
-                                            </td>
+                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                </div>                                            </td>
                                             <td data-title="Grade level">3rd-5th</td>
                                             <td data-title="Price">
                                                 TBD									
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self section-register" 
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self" 
                                                     data-id="">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content"> Sign Up</span>
