robotics  page fix

--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -538,7 +538,7 @@
                                     <tbody>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" class="section-start">TBD</td>
+                                            <td data-title="Time">TBD</td>
                                             <td data-title="Class">
                                                 <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="My Friends Online" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">
@@ -564,7 +564,7 @@
                                         </tr>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" class="section-start">TBD</td>
+                                            <td data-title="Time">TBD</td>
                                             <td data-title="Class">
                                                 <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="My Friends Online" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">
@@ -584,7 +584,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self section-register" 
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self" 
                                                     data-id="">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content"> Sign Up</span>
@@ -595,7 +595,7 @@
                                         </tr>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time"  class="section-start">TBD</td>
+                                            <td data-title="Time">TBD</td>
                                             <td data-title="Class">
                                                 <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" 
                                                 target="_blank" title="Private Class" style="text-decoration: none">
@@ -613,7 +613,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="#" class="pb-window-target-self section-register" 
+                                                    <a href="#" class="pb-window-target-self" 
                                                     data-id="">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content"> Sign Up</span>
@@ -624,7 +624,7 @@
                                         </tr>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-days="" class="section-start">TBD</td>
+                                            <td data-title="Time">TBD</td>
                                             <td data-title="Class">
                                                 <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" target="_blank" title="Private Class" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">Private Class </strong>
