robotics  page fix

--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -519,9 +519,7 @@
                                     </a>.                        
                                 </p>
                                 <p>
-                                    <span style="color: green">Allowed in this class: PC, Mac, Chromebook</span>
-                                    <br>
-                                    <span style="color: red">Not allowed in this class: Tablet, iPads</span>              
+                                    <span style="color: green">Allowed in this class: Computer (desktop or laptop)</span>            
                                 </p>
                                 <div id="responsiveTable">
                                 <table style="width: 100%;" class="table table-responsive">
@@ -613,8 +611,8 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="#" class="pb-window-target-self" 
-                                                    data-id="">
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self" 
+                                                >
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content"> Sign Up</span>
                                                         </span>
