--- a/css/style7.scss
+++ b/css/style7.scss
@@ -692,6 +692,8 @@ div.theme-footer-top .pb-testimonial ul>li>div>div.pb-testimonial-cite-up,
     align-items: baseline;
     justify-content: flex-end;
     z-index: 9999;
+    padding: 20px 0 10px 0;
+
 }
 .submenuWrapper .submenuLink{
     text-align: center;
@@ -707,8 +709,9 @@ div.theme-footer-top .pb-testimonial ul>li>div>div.pb-testimonial-cite-up,
   }
 
 .submenuWrapper .portalBtn {
-    padding: 20px 10px 10px 20px;
-    color: #4ccef0;
+    padding: 10px;
+    background-color: #4ccef0;
+    color: #fff;
     font-weight: bold;
     text-decoration: none;
     min-width: 100px;
