online  page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -71,7 +71,6 @@
 <div class="submenu">
     <div class="pb-main pb-clear-fix">
         <div class="submenuWrapper">
-            <a href="#" class="submenuLink">schools</a>
             <a href="/portal" class="portalBtn">Portal Log In</a>
         </div>
     </div>
@@ -143,31 +142,8 @@
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="#"><span></span> <i>My Friends </i> Online</a>
                 </li>
-                <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children sf-mega-enable-0  ">
-                    <a href="/school-programs">After School</a>
-                    <ul>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes"><span></span>Classes</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/grades"><span></span>Classes by Grade</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/age"><span></span>Classes by Age</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/tech-and-arts"><span></span>Technology and Arts Exploration</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/robotics"><span></span>Robotics</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/coding"><span></span>Coding</a>
-                        </li>
-                    </ul>
-                </li> -->
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
-                    <a href="#"><span></span> 1:1 Tutoring</a>
+                    <a href="#"><span></span> Private Coding</a>
                 </li>
 
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
@@ -261,35 +237,11 @@
                          <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/special-offers">-- Special Offers</a>
                         </li>
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/private-classes">Private Classes</a>
-                        </li> -->
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span>After School</a>
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page">
+                            <a href="/school-programs"> <i>My Friends</i>  Online</a>
                         </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page ">
-                            <a href="/classes">-- Classes</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/grades">-- Classes by Grade</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/age">-- Classes by Age</a>
-                        </li>                       
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/tech-and-arts">-- Technology and Arts Exploration</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/robotics">-- Robotics</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/coding">-- Coding</a>
-                        </li> -->
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span> <i>My Friends</i>  Online</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span> 1:1 Tutoring</a>
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page">
+                            <a href="/school-programs"> Private Coding</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children">
                             <a href="/about">About</a>
@@ -323,7 +275,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
 </div>
@@ -463,7 +414,7 @@
                             </p>
                         </blockquote>
                         
-                        <h2 class="h2 textCenter">
+                        <h2 class="h2">
                             CodeAdvantage featured in the press:
                         </h2>
 
@@ -571,7 +522,7 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="sideBanner">
+                        <!-- <div class="sideBanner">
                             <div class="sideBanner__down textCenter">
                                 <h5 class="h5">
                                     <strong>It's the  little things.</strong>
@@ -583,7 +534,7 @@
                                     <img src="/CA/uploads/suppurtchat.PNG" alt="">
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </aside>
                 </div>
                 <div class="rows">
