--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -647,7 +647,7 @@
                                 <img src="/CA/uploads/pygame-450-2.jpg" alt="Python"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/advanced-coding" target="_blank">Python</a>
-                                    <p>Grades 5th-10th+</p>
+                                    <p>Grades 5th-8th</p>
                                 </div>
                             </div>
 
@@ -655,7 +655,7 @@
                                 <img src="/CA/uploads/web-dis.jpg" alt="Web Development"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/web-development" target="_blank">Web Development</a>
-                                    <p>Grades 5th-10th+</p>
+                                    <p>Grades 5th-8th</p>
                                 </div>
                             </div>
     
@@ -663,7 +663,7 @@
                                 <img src="/CA/uploads/minecraft-modding-java-585x585.png" alt="Minecraft Modding: Java"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/minecraft-java-mods" target="_blank">Minecraft Modding: Java</a>
-                                    <p>Grades 5rd-8th</p>
+                                    <p>Grades 5th-8th</p>
                                 </div>
                             </div>
 
@@ -2275,7 +2275,7 @@
                         <div id="CampsSchedule">
                             <div class="accordeon">
                                 <h4 class="h4">
-                                    Daily (M-F) 1 hour each day (2 weeks) — 
+                                    Daily (M-F) 2 hours each day (2 weeks) — 
 
                                     <!-- {% set minTwoWeek = 99999999999 %}
                                     {% for item in twoWeek %}
@@ -3832,7 +3832,7 @@
                         <!-- {% if sections %} -->
                         <div>
                             <div class="accordeon">
-                                <h4 class="h4">Weekly 1 hour each each (8 weeks) —  
+                                <h4 class="h4">Weekly 2 hours each each (8 weeks) —  
 
                                 <!-- {% set minSections = 99999999999 %}
                                 {% for item in sections %}
