online  page fix

--- a/css/style7.css
+++ b/css/style7.css
@@ -4137,6 +4137,12 @@ aside {
       flex-wrap: wrap;
 }
 
+.pressBlock--left {
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
 .pressBlock a {
   margin: 0 20px;
 }
