--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -346,7 +346,7 @@
                                     <b>
                                         Need to fill a slot in the schedule? 
                                     </b>
-                                    Register for one of our many weekly or daily classes. On some days, we run more than 100 classes
+                                    Register for one of our many weekly or daily classes. On some days, we run more than 100 classes across many time zones. Receive discounted rates depending on the class time you pick
                                 </p>
                             </li>
                             <li>
@@ -367,6 +367,13 @@
                             </li>
                         </ol>
                         <h4 class="h4"><a href="#" style="text-decoration: none;">Find Classes to Fit your Child’s Grade Level</a></h4>
+                        <p>
+                            Our coding instruction spans K through 8th grade. Click on the red, blue, and yellow blocks below to explore 
+                            pages with detailed class descriptions. 
+                            <strong>
+                                Classes start at $195 for ten hours of instruction!
+                            </strong>
+                        </p>
                         <div id="schemes" class="pb-text">
                             <div class="wrapper online">
                                 <div class="heading k border">K</div>
@@ -418,7 +425,7 @@
                             CodeAdvantage featured in the press:
                         </h2>
 
-                        <div class="pressBlock">
+                        <div class="pressBlock pressBlock--left">
                             <a href="https://www8.gsb.columbia.edu/articles/columbia-business/coding-classes-kids-mark-shift-educational-priorities" title="Writing the Code for Success" target="_blank">
                                 <img class="alignnone size-medium wp-image-2130" src="/CA/uploads/ColumbiaUniversity-1-150x300.png" alt="Columbia University" width="200" height="100" />
                             </a>
@@ -3832,7 +3839,7 @@
                         <!-- {% if sections %} -->
                         <div>
                             <div class="accordeon">
-                                <h4 class="h4">Weekly 2 hours each each (8 weeks) —  
+                                <h4 class="h4">Weekly 2 hours each day (8 weeks) —  
 
                                 <!-- {% set minSections = 99999999999 %}
                                 {% for item in sections %}
