--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1119,6 +1119,11 @@ aside {
   margin: 0 20px;
 }
 
+
+.pressBlock--left a{
+  margin: 0 20px 0 0;
+}
+
 .pressBlock a img{
   transition: background-color 1s linear;
 }
