online  page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -367,7 +367,7 @@
                             </li>
                         </ol>
                         <h4 class="h4"><a href="#" style="text-decoration: none;">Find Classes to Fit your Child’s Grade Level</a></h4>
-                        <p>
+                        <p class="mb-middle">
                             Our coding instruction spans K through 8th grade. Click on the red, blue, and yellow blocks below to explore 
                             pages with detailed class descriptions. 
                             <strong>
