online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -301,7 +301,7 @@
         <section>
             <div class="headerUnderline">
                 <p>
-                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  SMALL GROUP CLASSES  |   35 COURSES  FOR AGES 6 - 13!
+                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  INSTRUCTION  |   35 COURSES  FOR AGES 6 - 13!
                 </p>
             </div>
         </section>
@@ -316,7 +316,10 @@
                             
                         </h2>    
                         <p> 
-                            Uncertainty is the norm, these days. But, as parents, we are persevering and putting in place new educational pathways to help to offset the impact on our children. CodeAdvantage is a great fit for your child's learning journey because even amidst the shifting environment, we are very certain of two things:
+                            Uncertainty is the norm, these days. But, as parents, we are persevering and putting in place 
+                            new educational pathways to help to offset the impact on our children. CodeAdvantage is a great fit for 
+                            your child's learning journey because even amidst the shifting environment, we are very certain of two 
+                            things:
                         </p>
                         <ol class="listNum mb-middle">
                             <li>
@@ -331,9 +334,9 @@
                         </h5>
                         <p>
                             Whatever your education plan looks like, this year, 
-                            My Friends Online LIVE coding classes can help to satisfy your 
+                           <i>My Friends</i>  Online LIVE coding classes can help to satisfy your 
                             child's needs for personal connection, enrichment, and growth. 
-                            My Friends Online allows you to curate an online learning pod with your child and his or her group of friends. 
+                            <i>My Friends</i>  Online allows you to curate an online learning pod with your child and his or her group of friends. 
                             <strong>
                             You pick the learners, class, day, time, and frequency. We provide the Rockstar Instructor, 
                             an exciting project-based coding curriculum, and the fun!
@@ -432,7 +435,7 @@
                             </a>
                         </h4>
                         <p>
-                            Our coding instruction spans 6th through 8th grade. Click on the red, blue, and yellow blocks, below, to get an overview on the types of coding instruction available. 
+                            Our coding instruction spans K through 8th grade. Click on the red, blue, and yellow blocks, below, to get an overview on the types of coding instruction available. 
                         </p>
                         <div id="schemes" class="pb-text mb-middle">
                             <div class="wrapper online">
@@ -475,7 +478,7 @@
                             <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>
                             <div class="textWithImgBlock__text">
                                 <p class="mt-middle">
-                                    Our My Friends Online and Tutoring learners can also take LEGO ® – based robotics classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
+                                    Our <i>My Friends</i>  Online and Private Online learners can also take <strong> LEGO ® – based robotics</strong> classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
                                     For more information, please visit our <a href="#" title="Robotics">Robotics Page</a>.
                                 </p>
                             </div>
@@ -497,7 +500,7 @@
                                     </li>
                                     <li>
                                         <p>
-                                            Concept review tools.
+                                            Concept review content.
                                         </p>
                                         
                                     </li>
