online  page fix

--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 
@@ -71,7 +70,6 @@
 <div class="submenu">
     <div class="pb-main pb-clear-fix">
         <div class="submenuWrapper">
-            <a href="#" class="submenuLink">schools</a>
             <a href="/portal" class="portalBtn">Portal Log In</a>
         </div>
     </div>
@@ -143,31 +141,8 @@
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="#"><span></span> <i>My Friends </i> Online</a>
                 </li>
-                <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children sf-mega-enable-0  ">
-                    <a href="/school-programs">After School</a>
-                    <ul>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes"><span></span>Classes</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/grades"><span></span>Classes by Grade</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/age"><span></span>Classes by Age</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/tech-and-arts"><span></span>Technology and Arts Exploration</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/robotics"><span></span>Robotics</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/coding"><span></span>Coding</a>
-                        </li>
-                    </ul>
-                </li> -->
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
-                    <a href="#"><span></span> 1:1 Tutoring</a>
+                    <a href="#"><span></span> Private Coding</a>
                 </li>
 
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
@@ -261,35 +236,11 @@
                          <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/special-offers">-- Special Offers</a>
                         </li>
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/private-classes">Private Classes</a>
-                        </li> -->
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span>After School</a>
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page">
+                            <a href="/school-programs"> <i>My Friends</i>  Online</a>
                         </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page ">
-                            <a href="/classes">-- Classes</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/grades">-- Classes by Grade</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/age">-- Classes by Age</a>
-                        </li>                       
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/tech-and-arts">-- Technology and Arts Exploration</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/robotics">-- Robotics</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/coding">-- Coding</a>
-                        </li> -->
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span> <i>My Friends</i>  Online</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span> 1:1 Tutoring</a>
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page">
+                            <a href="/school-programs"> Private Coding</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children">
                             <a href="/about">About</a>
@@ -323,7 +274,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
 </div>
@@ -351,7 +301,7 @@
         <section>
             <div class="headerUnderline">
                 <p>
-                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  SMALL GROUP CLASSES  |   35 COURSES  FOR AGES 6 - 13!
+                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  INSTRUCTION  |   35 COURSES  FOR AGES 6 - 13!
                 </p>
             </div>
         </section>
@@ -483,7 +433,7 @@
                             Explore the options for online coding tutoring! From Scratch Jr. to Python instruction, we span the coding journey.
                         </h4>
                         <p>
-                            Our coding instruction spans 6th through 8th grade. Click on the red, blue, and yellow blocks, below, to get an overview on the types of coding instruction available. 
+                            Our coding instruction spans K through 8th grade. Click on the red, blue, and yellow blocks, below, to get an overview on the types of coding instruction available. 
                         </p>
                         <div id="schemes" class="pb-text mb-middle">
                             <div class="wrapper online">
@@ -526,7 +476,7 @@
                             <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>
                             <div class="textWithImgBlock__text">
                                 <p class="mt-middle">
-                                    Our My Friends Online and Tutoring learners can also take LEGO ® – based robotics classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
+                                    Our <i>My Friends</i>  Online and Tutoring learners can also take <strong>LEGO ® – based robotics </strong> classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
                                     For more information, please visit our <a href="#" title="Robotics">Robotics Page</a>.
                                 </p>
                             </div>
@@ -548,7 +498,7 @@
                                     </li>
                                     <li>
                                         <p>
-                                            Concept review tools.
+                                            Concept review content.
                                         </p>
                                         
                                     </li>
