online  page fix

--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -476,7 +476,7 @@
                             <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>
                             <div class="textWithImgBlock__text">
                                 <p class="mt-middle">
-                                    Our <i>My Friends</i>  Online and Tutoring learners can also take <strong>LEGO ® – based robotics </strong> classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
+                                    Our Private Online and <i>My Friends</i> Online can also take <strong>LEGO ® – based robotics </strong> classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
                                     For more information, please visit our <a href="#" title="Robotics">Robotics Page</a>.
                                 </p>
                             </div>
