--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -288,7 +288,7 @@
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
         <section class="sectionheader"  style="
-        background-image:url(/CA/uploads/private-classes-header.jpg); background-position: 60% 36%; background-size: auto, cover;padding:60px 0;">
+        background-image:url(/CA/uploads/private-header.png); background-position: 60% 36%; background-size: auto, cover;padding:60px 0;">
             <div class="container">
                 <div class="rows">
                     <article>
@@ -555,7 +555,7 @@
                         </div>
                         <div class="sideBanner">
                             <div class="sideBanner__up">
-                                <img class="vp-img" src="/CA/uploads/girl02_600x423.jpg"  alt="CA Online Classes">
+                                <img class="vp-img" src="/CA/uploads/girl03_600x423.jpg"  alt="CA Online Classes">
                             </div>
                             <div class="sideBanner__down textCenter">
                                 <form action="" id="onlineEmail">
